# 3dface

./: .gitignore  .gitmodules  0a_acquire.ipynb  1_calibrate.py  README.md  _launch.bat  acquire.py  gui.py  probe_gui_replica.py  probe_triggers.py  pyproject.toml
configs/: mono8_mono.pfs
configs/boards/: charuco_5x5_05mm.yaml
gui_app/: calibration_worker.py  camera_manager.py  encode_worker.py  grab_thread.py  hardware_check.py  main_window.py  serial_controller.py  session_config.py  writer_thread.py
gui_app/widgets/: camera_grid.py  sidebar.py  toggle_switch.py
profiles/: 3dface.yaml  3dpose.yaml
